--- a/css/style.css
+++ b/css/style.css
@@ -84,19 +84,19 @@ main {
 
 }
 
-#grid-container>.easy {
+#grid-container>.cell-100 {
     height: 100px;
     width: 100px;
 
 }
 
-#grid-container>.medium {
+#grid-container>.cell-81 {
     height: calc(1000px / 9);
     width: calc(1000px / 9);
 
 }
 
-#grid-container>.hard {
+#grid-container>.cell-49 {
     height: calc(1000px / 7);
     width: calc(1000px / 7);
 
